syntax = "proto3";

package order;
option go_package = "github.com/lucianocasa/api/internal/api/grpcapi/pb";

service OrderService {
  rpc ListOrders (Empty) returns (OrderList);
}

message Empty {}

message Order {
  int32 id = 1;
  string customer_name = 2;
  double total = 3;
  string created_at = 4;
}

message OrderList {
  repeated Order orders = 1;
}
